<resources>
    <string name="app_name">Car Rental</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_add">Add</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_cars">Cars</string>
    <string name="tab_users">User</string>
    <string name="no_item_found">No Item Found</string>
    <string name="dots">...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">DETAIL</string>
    <string name="menu_order">Order</string>
    <string name="menu_update">Update</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_detail">Detail</string>
    <string name="name_field">Name</string>
    <string name="start_date_field">Start Date</string>
    <string name="end_date_field">End Date</string>
    <string name="btn_confirm">Confirm</string>
    <string name="order_title">Order</string>
    <string name="mobile_phone_field">Mobile Phone</string>
    <string name="address_field">Address</string>
    <string name="btn_save">Save</string>
    <string name="new_user_popup">New User</string>
    <string name="add_new_car_title">Add New Car</string>
    <string name="car_brand_field">Car Brand</string>
    <string name="car_model_field">Car Model</string>
    <string name="car_license_plat_field">Car License Plat</string>
    <string name="fare_per_day_field">Fare Per Day</string>
    <string name="msg_internet_timed_out">Internet Timed Out</string>
    <string name="msg_no_internet_connection">No Internet Connection</string>
    <string name="auto_choose_user">Choose User</string>
    <string name="pick_menu">PICK</string>
    <string name="crop_menu">CROP</string>
    <string name="save_menu">SAVE</string>
    <string name="filter_menu">FILTER</string>

</resources>
