<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             tools:context="android.dstyo.com.androidtest.page.users.UserAddFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/field_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:hint="@string/name_field"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/field_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edt_name"
                android:ems="10"
                android:hint="@string/address_field"/>

            <EditText
                android:id="@+id/edt_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/field_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edt_address"
                android:ems="10"
                android:hint="@string/mobile_phone_field"
                android:inputType="phone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/new_user_popup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/btn_save"/>
    </RelativeLayout>
</FrameLayout>
